test/constBlockConsuming16_1.slq

def foo(x:ğ”¹){
	y:=dup(x);
	z:=dup(y);
	if z{
		x:=H(x);
		w:=X(z); /// error
	}else{
		w:=z;
	}
	return (x,w);
}

